resolve most recommendations